# LVGL

./: .gitignore  CMakeLists.txt  README.md  consts.html  doc_components.html  doc_overview.html  doc_project.html  editor_overview.html  events.html  globals.xml  lv_conf.h  main.c  overview_snippet.html  project.xml  root.html  screens_doc.html  styles.html  subjects.html  syntax.html  tmp_lvgl.py  viewer_index.js  xml_index.html
branches/main/: project.xml
cmake/: FindSDL2.cmake
components/: hello.xml
screens/: home.xml  screen_main.xml
src/: main.c
src/hal/: sdl_port.c  sdl_port.h
